# 3dgame

./: .gitignore  Dockerfile  README.md  build.gradle  build.gradle.kts  docker-entrypoint.sh  gradle.properties  gradlew  gradlew.bat  serve_apk.py  settings.gradle  settings.gradle.kts
android/: build.gradle  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/example/forestcollect/: AndroidLauncher.java
android/src/main/res/values/: strings.xml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GameRenderer.cpp  GameRenderer.h  MathUtils.h  NativeBridge.cpp
app/src/main/java/com/example/forestcoins/game/: ForestCoinGame.java  QualityLevel.java
app/src/main/java/com/example/forestcoins/ui/: GameActivity.java  MainActivity.java  SettingsActivity.java
app/src/main/java/com/example/forestgame/: GameActivity.java  GameNativeBridge.java  GameRenderer.java  GameSurfaceView.java  JoystickView.java  MainActivity.java  SettingsActivity.java  SimpleOnItemSelectedListener.java
app/src/main/java/com/example/forestquest/: GameActivity.kt  GraphicsPreferences.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/example/forestquest/render/: GameRenderer.kt  GameSurfaceView.kt  ShaderProgram.kt
app/src/main/java/com/example/forestquest/render/geometry/: GeometryBuilder.kt  Mesh.kt
app/src/main/java/com/example/forestquest/ui/: JoystickView.kt  LookControllerView.kt
app/src/main/java/com/forestcoins/game/: GameActivity.kt  MainActivity.kt
app/src/main/java/com/forestcoins/game/data/: GraphicsQuality.kt  GraphicsSettingsRepository.kt
app/src/main/java/com/forestcoins/game/game/: GameRenderer.kt  GameSurfaceView.kt  Mesh.kt  MeshFactory.kt  VirtualJoystickView.kt
app/src/main/res/color/: ic_launcher_background.xml
app/src/main/res/drawable/: background_main.xml  background_menu.xml  button_primary.xml  button_secondary.xml  forest_scene.xml  hud_panel.xml  ic_app_icon.xml  ic_launcher.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
core/: build.gradle
core/src/main/java/com/example/forestcollect/game/: ForestCollectGame.java
scripts/: serve_apk.py
tools/: serve_apk.py
(+14 files in other folders)
